# backend/src/channels/dto/create-channel.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsNotEmpty } from 'class-validator';
+
+export class CreateChannelDto {
+  @IsString()
+  @IsNotEmpty()
+  @ApiProperty()
+  name: string;
+}
