# backend/src/messages/dto/create-message.dto.ts
@@ -1,0 +1,11 @@
+import { IsString, IsNotEmpty, IsInt, IsOptional } from 'class-validator';
+
+export class CreateMessageDto {
+  @IsString()
+  @IsNotEmpty()
+  content: string;
+
+  @IsInt()
+  @IsOptional()
+  parentMessageId?: number;
+}
